# Sentifox

./: LICENSE  README.md  pyproject.toml  requirements.txt  sentifox.cmd
analysis/: topic_clustering.py
graph_analysis/: entity_extractor.py  platform_dynamics.py  temporal_graph.py
rag/: document_processor.py  rag_engine.py  vector_store.py
reports/: generator.py
scheduler/: tasks.py
sentifox/: app.py  cli.py  config.py
sentifox/analysis/: alert_engine.py  insight_generator.py  sentiment.py  trend_analysis.py
sentifox/cli/: ascii_fox.py  simulation_display.py  theme.py  ui.py
sentifox/crawlers/: base.py  manager.py  mock_generator.py  news.py  weibo.py  xiaohongshu.py  zhihu.py
sentifox/graph_analysis/: agent_communication.py  cognitive_agent.py  dynamic_graph_viz.py  graph_builder.py  graph_viz.py  influencer_detection.py  interventions.py  memory_system.py  persona_agent.py  propagation_simulator.py  relation_extractor.py  sentifox_simulator.py  simulation_report.py  temporal_embedding.py  temporal_engine.py
sentifox/models/sentiment/: config.json
utils/: database.py  llm_client.py  stopwords.txt
visualization/: charts.py
